--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -2,6 +2,9 @@
 # Reccomended to lock the version number to avoid unexpected changes.
 
 runpod == 0.9.3
+# Bark
 git+https://github.com/suno-ai/bark.git
 scipy
 ipython
+# Supabase
+supabase
